--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,258 +1,2 @@
-# 配置文件加密key
-jasypt:
-  encryptor:
-    password: xboot
-
-server:
-  port: 8888
-  servlet:
-    context-path: /
-  tomcat:
-    uri-encoding: UTF-8
-    max-threads: 1000
-    min-spare-threads: 30
-
-spring:
-  # 数据源
-  datasource:
-    # Jasypt加密 可到common-utils中找到JasyptUtil加解密工具类生成加密结果 格式为ENC(加密结果)
-    url: jdbc:mysql://topsoft.com.cn/wool?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: 123456
-    driverClassName: com.mysql.jdbc.Driver
-
-    #    url: jdbc:oracle:thin:@topsoft.com.cn:1521:orcl 192.168.33.96 10.2.3.133
-    #    username: hbfets
-    #    password: ENC(rTadFMuT/DPcaHXEFEH7AkU6NggePkUl)
-    #    driverClassName: oracle.jdbc.driver.OracleDriver
-
-    type: com.alibaba.druid.pool.DruidDataSource
-    logSlowSql: true
-    # Druid StatViewServlet配置
-    druid:
-      stat-view-servlet:
-        # 默认true 内置监控页面首页/druid/index.html
-        enabled: true
-        url-pattern: /druid/*
-        # 允许清空统计数据
-        reset-enable: true
-        login-username: root
-        login-password: ENC(F4B0s6u9xcDw3V+P0qC4CA==)
-        # IP白名单 多个逗号分隔
-        allow:
-        # IP黑名单
-        deny:
-      filter:
-        stat:
-          # 显示慢sql 默认当超过3秒显示
-          log-slow-sql: true
-  jpa:
-    # 显示sql
-    show-sql: true
-    # 自动生成表结构
-    generate-ddl: true
-    hibernate:
-      ddl-auto: none
-  # Redis
-  redis:
-    host: localhost
-    password:
-    # 数据库索引 默认0
-    database: 1
-    port: 6379
-  # Elasticsearch
-  data:
-    elasticsearch:
-      cluster-nodes: 127.0.0.1:9300
-  # 定时任务
-  quartz:
-    # 任务信息存储至数据库
-    job-store-type: jdbc
-    properties:
-      org:
-        quartz:
-          jobStore:
-            misfireThreshold: 100
-  # 工作流
-  activiti:
-    check-process-definitions: false
-    db-identity-used: true
-    # 自动生成Activiti相关表 第一次生成后建议关闭提高运行速度
-    database-schema-update: false
-    history-level: full
-    # 扩展配置
-    xboot:
-      # 流程图字体 默认宋体
-      activityFontName: Microsoft YaHei
-      labelFontName: Microsoft YaHei
-  # 文件大小上传配置
-  servlet:
-    multipart:
-      max-file-size: 5MB
-      max-request-size: 5MB
-  jackson:
-    time-zone: GMT+8
-
-
-  mvc:
-    static-path-pattern: /**
-  resources:
-    static-locations: file:/
-
-xboot:
-  # 全局限流
-  rateLimit:
-    enable: true
-    # 每1秒内
-    timeout: 1000
-    # 总限制100个请求
-    limit: 100
-  # token交互方式
-  token:
-    # 默认redis 设置为true后，token将存入redis，并具有单点登录功能 设为false将使用JWT交互
-    redis: true
-    # token中存储用户权限数据 设为true开启后可避免每次请求再获取用户权限，但有可能导致编辑权限菜单后无法读取到最新权限数据（需用户重新登录）
-    storePerms: true
-  # token过期时间（分钟）
-  tokenExpireTime: 60
-  # 用户选择保存登录状态对应token过期时间（天）
-  saveLoginTime: 7
-  # 限制用户登陆错误次数（次）
-  loginTimeLimit: 10
-  # 错误超过次数后多少分钟后才能继续登录（分钟）
-  loginAfterTime: 10
-  # ES
-  elasticsearch:
-    nodeClient: 127.0.0.1:9200
-  # 日志记录方式 true使用Elasticsearch记录 false记录至数据库中
-  logRecord:
-    es: false
-  # mob api配置 mob官网注册申请即可
-  mob:
-    appKey: 你的appKey
-  # 第三方社交登录配置
-  social:
-    # 前端回调登录地址
-    callbackFeUrl: http://127.0.0.1:9999/
-    
-    in
-    # 前端绑定账号回调地址
-    callbackFeRelateUrl: http://127.0.0.1:9999/relate
-    # github
-    github:
-      clientId: 你的clientId
-      clientSecret: 你的clientSecret
-      callbackUrl: http://127.0.0.1:8888/xboot/social/github/callback
-    # qq
-    qq:
-      appId: 你的appId
-      appKey: 你的appKey
-      callbackUrl: http://127.0.0.1:8888/xboot/social/qq/callback
-    # weibo
-    weibo:
-      appKey: 你的appKey
-      appSecret: 你的appSecret
-      callbackUrl: http://127.0.0.1:8888/xboot/social/weibo/callback
-
-# Actuator
-management:
-  health:
-    status:
-      http-mapping:
-        DOWN: 200
-        OUT_OF_SERVICE: 200
-        FATAL: 200
-        UNKNOWN: 200
-    # 暂未用到ES 关闭其健康检查
-    elasticsearch:
-      enabled: false
-  endpoint:
-    health:
-      show-details: always
-  endpoints:
-    web:
-      base-path: /xboot/actuator/
-      exposure:
-        include: '*'
-
-# 忽略鉴权url
-ignored:
-  urls:
-    - /editor-app/**
-    - /xboot/act/**
-    - /xboot/dictData/getByType/**
-    - /xboot/dealData/getAllDealDataForOnShelfForFront/**
-    - /xboot/email/sendResetCode
-    - /xboot/email/resetByEmail
-    - /xboot/file/view/**
-    - /xboot/social/**
-    - /xboot/ws/**
-    - /xboot/user/regist
-    - /xboot/barterer/creatUnitInfoByself
-    - /xboot/user/smsLogin
-    - /xboot/user/resetByMobile
-    - /xboot/esign/fromApp
-    - /xboot/common/**
-    - /xboot/file/**
-    - /druid/**
-    - /swagger-ui.html
-    - /swagger-resources/**
-    - /swagger/**
-    - /**/v2/api-docs
-    - /**/*.js
-    - /**/*.css
-    - /**/*.png
-    - /**/*.ico
-    - /test/**
-    - /xboot/**
-
-# Swagger界面内容配置
-swagger:
-  title: XBoot API接口文档
-  description: XBoot Api Documentation
-  version: 1.0.0
-  termsOfServiceUrl: http://blog.exrick.cn
-  contact:
-    name: Exrick
-    url: http://blog.exrick.cn
-    email: 1012139570@qq.com
-
-# Mybatis-plus
-mybatis-plus:
-  mapper-locations: classpath*:mapper/*.xml
-
-# 日志
-logging:
-  file: xboot-logs/xboot.log-version3
-
-
-
-
-#e签宝配置项
-esign:
-  eSignEnabled: true
-  projectId: 4438792192
-  projectSecret: 3832de3a6858fa49cc8177acc16ca5d4
-  platformSeal: e6ecb2fd-e4ec-4c04-be97-85c3d46a960e
-  host: https://smlopenapi.esign.cn
-  urlListen: http://topsoft.com.cn:8021/xboot/esign/fromApp
-  autoMenu_dzqianzhang_yunyingroleId: 165985245424783360
-  autoMenu_dzqianzhang_menuId: 210144776945668096
-
-#生产  host: https://openapi.esign.cn
-
-
-
-#邮件用户名
-Email:
-  emailName: crt@uxsino.com
-#邮件密码
-  emailPassWord: Top5&xcr
-#邀请用户时发送的链接
-#自助注册退回时发送的链接
-  Url:
-    Value: http://topsoft.com.cn:8021/registerWeb
-    #邀请用户时发送的链接
-    InvitationValue: http://topsoft.com.cn:8021/userRegister
-
-
+springcloud:
+  version: 1
